# ike.md

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  MIGRATING_FROM_IKE.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.docket/: docket.json
.docket/completed/: TASK-0004 - fix-task-search-to-include-archive-folder-when-inc.md  TASK-0005 - write-readme-md.md  TASK-0012 - wire-research-md-into-cockpit-eidos-mcp-json.md  TASK-0014 - audit-research-md-directory-convention-standardize.md  TASK-0015 - audit-visionlog-directory-convention-standardize-t.md  TASK-0017 - align-guid-routing-tool-names-across-the-trilogy-p.md  TASK-0019 - realign-research-md-to-trilogy-standard-project-in.md  TASK-0020 - wire-visionlog-md-and-research-md-into-cockpit-eid.md  TASK-0023 - add-mcp-project-root-env-var-support-session-level.md  (+1 more)
.forge/: manifest.yaml
.governor/: config.yaml
.ike/: ike.json
.test-forge/: history.jsonl  last-test.md
.visionlog/: vision.md
contrib/: com.docket.daemon.plist  com.ike.daemon.plist
docket_md/: __init__.py  config.py  daemon.py  files.py  hier_config.py  mcp_server.py  migrate_from_ike.py  server.py
docs/: RFC-001-session-aware-daemon.md
ike_md/: __init__.py  config.py  daemon.py  files.py  hier_config.py  security.py  server.py
refactor/: capture-fixtures.mjs  migration-map.md  verify-fixtures.py
src/: config.ts  files.ts  index.ts  security.ts  server.ts
tests/: test_daemon.py  test_hier_config.py  test_plans.py  test_sessions.py  test_wrike_hook.py
(+118 files in other folders)
