[project]
name = "docket-md"
version = "0.3.0"
description = "The execution forge — tasks, milestones, documents, Definition of Done"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Shanklin", email = "daniel@eidosagi.com" },
]
keywords = ["mcp", "task-management", "milestones", "execution", "agent-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
wrike = [
    "httpx>=0.27.0",
]
daemon = [
    "claude-session-commons>=0.1.0",
]

[project.scripts]
docket-md = "docket_md.server:main"
docket-daemon = "docket_md.daemon:main"
docket-migrate = "docket_md.migrate_from_ike:main"

[project.entry-points."mcp"]
docket-md = "docket_md.server:mcp"

[project.urls]
Homepage = "https://github.com/eidos-agi/docket.md"
Repository = "https://github.com/eidos-agi/docket.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docket_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
